# fin-proto-py

./: Makefile  README.md  get  note.md  pyproject.toml
.github/workflows/: python-package.yml
bin_codec/: bytebuf.py  bytebuf_test.py  codec.py
lib/: Makefile  bjse_binary.py  bjse_binary_test.py  bytebuf.py  bytebuf_test.py  checksum.py  checksum_test.py  codec.py  codec_test.py  message_factory.py  message_factory_test.py  rc_binary.py  rc_binary_test.py  root_packet.py  root_packet_test.py  sse_binary.py  sse_binary_not_gen_test.py  sse_binary_test.py  szse_binary.py  szse_binary_test.py
